Create AccountController class
* Create AccountController class
* Refactor OpenApi yaml
* Refactor integration tests
